Fix a bug where drawer overlays would have scrollbars with short content

--- a/src/unpoly/layer.sass
+++ b/src/unpoly/layer.sass
@@ -81,16 +81,16 @@ up-focus-trap
   // into the end of this layer's viewport.
   overscroll-behavior: contain
 
-  // Center .up-overlay-box within the viewport
-  text-align: center
+  display: flex
+
+  // Center %up-overlay-box within the viewport.
+  // This also turns block children into flex children, so they can grow with content,
+  // up to our max-width of 100%.
+  justify-content: center
 
 %overlay-box
   // We focus the box after the overlay was opened.
   @extend %no-focus-outline
-
-  // Make it grow with the width of .up-overlay-content
-  display: inline-block
-  text-align: left
 
   position: relative
 
@@ -150,9 +150,6 @@ up-modal-viewport
       $padding-y: $modal-viewport-padding-y * ($nesting + 1)
       padding: $padding-y $padding-x
 
-  // Allow frame to grow from the center, up to its max-width of 100%
-  justify-content: center
-
 up-modal-box
   @extend %overlay-box
   @extend %large-shadow
@@ -192,11 +189,11 @@ up-drawer-viewport
   @extend %overlay-viewport
 
   // Allow frame to grow from the left, up to its max-width of 100%
-  text-align: left
+  justify-content: flex-start
 
   up-drawer[position=right] &
     // Allow frame to grow from the right, up to its max-width of 100%
-    text-align: right
+    justify-content: flex-end
 
 up-drawer-box
   @extend %overlay-box
